<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opRadiosLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupOps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButtonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioAddLabel" />

        <RadioButton
            android:id="@+id/radioButtonSubtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioLabelSub" />

        <RadioButton
            android:id="@+id/radioButtonMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioLabelMult" />

        <RadioButton
            android:id="@+id/radioButtonDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioLabelDiv" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnLabelSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOps" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnLabelCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelect" />
</androidx.constraintlayout.widget.ConstraintLayout>