<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTextNumOne"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numOneHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumTwo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numTwoHint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ArrLabel"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumOne"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumTwo"
        app:layout_constraintStart_toEndOf="@+id/editTextNumOne"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPickOp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pickOpBtnLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calcBtnLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPickOp" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/clearBtnLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>